fix layout issues in mobile safari

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   counter-reset: levels;
 }
 
@@ -21,13 +25,15 @@
 
 .content {
   flex: 10;
+  display: flex;
+  flex-direction: column;
   position: relative;
 }
 
 .levels {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
   margin: 0;
   padding: 0;
   font-size: large;
